--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -2,6 +2,8 @@
 
 .home-container {
   min-height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .home-header {
